@@ -22,6 +22,7 @@ The collection currently includes the following programs:
 <!-- pepper -->
 <UL>
 	<LI><a href="#generate-chirp">sndfile-generate-chirp</a>
+	<LI><a href="#jackplay">sndfile-jackplay</a>
 	<LI><a href="#spectrogram">sndfile-spectrogram</a>
 	<LI><a href="#mix-to-mono">sndfile-mix-to-mono</a>
 </UL>
@@ -72,6 +73,20 @@ Create a sound file containing a swept sine wave (ie a chirp).
     The output file type is determined by the file name extension which should be one
     of 'wav', 'aifc', 'aif', 'aiff', 'au', 'caf' and 'w64'.
 </pre>
+
+<!-- pepper -->
+<br /><br />
+<A NAME="jackplay"></a>
+<H3><B>sndfile-jackplay</B></H3>
+
+<p>
+Play a sound file via the JACK Audio Connect Kit daemon.
+</p>
+
+<pre>
+    sndfile-jackplay &lt;filename&gt;
+</pre>
+
 
 <!-- pepper -->
 <br /><br />
