@@ -6,6 +6,9 @@
     * man/sndfile-jackplay.1 Makefile.am
     Add man page for sndfile-jackplay.
 
+    * doc/index.html
+    Add sndfile-jackplay.
+
 2009-12-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/sndfile-merge.c
